changement de la classe travaux : suppression detbuilder car inutile